[tool.poetry]
name = "garmin-virb-utils"
version = "0.1.0"
description = "Utilities for Garmin Virb"
authors = ["Martin Ueding <mu@martin-ueding.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
